--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LandingActivity"
+    android:background="@drawable/pp_back"
     android:padding="20dp"
     android:orientation="vertical">
 
@@ -24,79 +25,86 @@
         android:layout_marginTop="60dp"
         app:strokeWidth="5dp"
         app:contentPadding="15dp">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Welcome to Timely Lemon!"
-                android:textSize="22dp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textAlignment="center"
-                />
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="The trivia app themed around all movie and music pop culture from the 70’s, 80’s, 90’s and 2000’s. Test your general knowledge!"
-                    android:textSize="20dp"
-                    android:textStyle=""
-                    android:layout_marginTop="35dp"
-                    android:textColor="@color/black"
-                    android:textAlignment="center"
-                    />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_black"
+            android:text="Welcome to Timely Lemon!"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="22dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:fontFamily="@font/roboto"
+            android:text="The trivia app themed around all movie and music pop culture from the 70’s, 80’s, 90’s and 2000’s. Test your general knowledge!"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="" />
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
+        android:fontFamily="@font/roboto_black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Enter Your Name"
-        android:textSize="32dp"
+        android:textSize="26dp"
+        android:layout_marginBottom="10dp"
         android:textStyle="bold"
         android:layout_marginTop="80dp"
         android:textColor="@color/black"
         android:textAlignment="center"
         />
 
-        <com.google.android.material.textfield.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/outlinedTextField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Name"
+        app:boxStrokeWidth="5dp"
+        app:boxStrokeColor="@color/black"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:boxStrokeWidthFocused="4dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:boxStrokeWidth="5dp"
-            app:boxStrokeColor="@color/black"
-            app:boxCornerRadiusBottomEnd="10dp"
-            app:boxCornerRadiusTopEnd="10dp"
-            app:boxCornerRadiusBottomStart="10dp"
-            app:boxCornerRadiusTopStart="10dp">
+            android:layout_height="80dp"
+            android:id="@+id/u_name"
+            android:textStyle="bold"
+            android:fontFamily="@font/roboto"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:hint="Your Name"
-                android:id="@+id/et_username"
-                />
-
-        </com.google.android.material.textfield.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
         android:id="@+id/btn_start"
         android:layout_height="80dp"
-        app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/brigth_yellow"
+        app:cornerRadius="10dp"
+        android:backgroundTint="@color/bright_yellow"
         app:strokeColor="@color/black"
         android:layout_marginTop="120dp"
         app:strokeWidth="5dp"
+        android:textColor="@color/black"
+        android:text="Start"
+        android:textAllCaps="false"
+        android:fontFamily="@font/roboto_black"
+        android:textSize="26dp"
+        android:textStyle="bold"
         app:contentPadding="15dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Start"
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            />
-
     </com.google.android.material.button.MaterialButton>
+
 
 </LinearLayout>
