--- a/app/src/main/res/layout/activity_category_select.xml
+++ b/app/src/main/res/layout/activity_category_select.xml
@@ -24,6 +24,7 @@
             android:backgroundTint="@color/black"
             android:backgroundTintMode="screen"
             app:backgroundTint="@color/black"
+            android:id="@+id/btn_back"
             app:strokeColor="@color/black" />
 
         <TextView
@@ -57,6 +58,7 @@
 
         <TextView
             android:layout_width="match_parent"
+            android:id="@+id/high_one"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_black"
             android:text="High Score: 200"
@@ -87,6 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_black"
+            android:id="@+id/high_two"
             android:text="High Score: 200"
             android:textColor="@color/black"
             android:textAlignment="center"
@@ -115,6 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_black"
+            android:id="@+id/high_three"
             android:text="High Score: 200"
             android:textColor="@color/black"
             android:textAlignment="center"
@@ -143,6 +147,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_black"
+            android:id="@+id/high_four"
             android:text="High Score: 200"
             android:textColor="@color/black"
             android:textAlignment="center"
@@ -161,6 +166,8 @@
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="26dp"
+        android:shadowRadius="@integer/material_motion_duration_long_2"
+        android:shadowColor="@color/black"
         android:textStyle="bold"
         app:contentPadding="15dp"
         app:cornerRadius="10dp"
