--- a/app/src/main/res/layout/activity_category_select.xml
+++ b/app/src/main/res/layout/activity_category_select.xml
@@ -39,6 +39,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/qz_Seven"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:padding="17dp"
@@ -125,56 +126,6 @@
             android:textSize="18dp" />
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:padding="17dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_cate"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:text="2000's"
-            android:textColor="@color/black"
-            android:layout_marginBottom="12dp"
-            android:textAlignment="center"
-            android:textSize="26dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:id="@+id/high_four"
-            android:text="High Score: 200"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="18dp" />
-
-    </LinearLayout>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_start"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="@color/bright_yellow"
-        android:fontFamily="@font/roboto_black"
-        android:text="Start Trivia"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="26dp"
-        android:shadowRadius="@integer/material_motion_duration_long_2"
-        android:shadowColor="@color/black"
-        android:textStyle="bold"
-        app:contentPadding="15dp"
-        app:cornerRadius="10dp"
-        app:strokeColor="@color/black"
-        app:strokeWidth="5dp">
-
-    </com.google.android.material.button.MaterialButton>
 
 
 </LinearLayout>
