--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -29,18 +29,25 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/q_Image"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_gravity="center" />
+
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="110dp"
         app:cardCornerRadius="10dp"
         app:cardBackgroundColor="@color/light_pink"
         app:strokeColor="@color/black"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         app:strokeWidth="5dp"
         app:contentPadding="20dp">
 
         <TextView
+            android:id="@+id/qp_question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
@@ -48,96 +55,65 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:textStyle="" />
+             />
     </com.google.android.material.card.MaterialCardView>
 
     //question containers
-    <LinearLayout
+    <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:padding="11dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ques_con"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:id="@+id/rg_answers">
+        <RadioButton
+            android:id="@+id/rb_answerOne"
+            android:layout_width="370dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:text="80's"
-            android:id="@+id/answerOne"
-            android:textColor="@color/black"
-            android:layout_marginBottom="12dp"
-            android:textAlignment="center"
-            android:textSize="26dp" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:padding="11dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ques_con"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
+            android:layout_marginBottom="15dp"
+            android:text="Answer One"
+            android:textSize="21dp"
+            android:gravity="center"
+            android:paddingBottom="4dp"
+            android:background="@drawable/ques_con"/>
+        <RadioButton
+            android:id="@+id/rb_answerTwo"
+            android:layout_width="370dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:text="80's"
-            android:id="@+id/answerTwo"
-            android:textColor="@color/black"
-            android:layout_marginBottom="12dp"
-            android:textAlignment="center"
-            android:textSize="26dp" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:padding="11dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ques_con"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
+            android:layout_marginBottom="15dp"
+            android:text="Answer One"
+            android:textSize="21dp"
+            android:gravity="center"
+            android:paddingBottom="4dp"
+            android:background="@drawable/ques_con"/>
+        <RadioButton
+            android:id="@+id/rb_answerThree"
+            android:layout_width="370dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:text="80's"
-            android:id="@+id/answerThree"
-            android:textColor="@color/black"
-            android:layout_marginBottom="12dp"
-            android:textAlignment="center"
-            android:textSize="26dp" />
+            android:layout_marginBottom="15dp"
+            android:text="Answer One"
+            android:textSize="21dp"
+            android:gravity="center"
+            android:paddingBottom="4dp"
+            android:background="@drawable/ques_con"/>
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:padding="11dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ques_con"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
+        <RadioButton
+            android:id="@+id/rb_answerFour"
+            android:layout_width="370dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:text="80's"
-            android:id="@+id/answerFour"
-            android:textColor="@color/black"
-            android:layout_marginBottom="12dp"
-            android:textAlignment="center"
-            android:textSize="26dp" />
+            android:layout_marginBottom="15dp"
+            android:text="Answer One"
+            android:textSize="21dp"
+            android:gravity="center"
+            android:paddingBottom="4dp"
+            android:background="@drawable/ques_con"/>
 
-    </LinearLayout>
+
+    </RadioGroup>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/bright_yellow"
         android:fontFamily="@font/roboto_black"
         android:text="Next"
