--- a/app/src/main/res/layout/activity_category_select.xml
+++ b/app/src/main/res/layout/activity_category_select.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LandingActivity"
-    android:background="@drawable/pp_back"
+    android:background="@drawable/bg_android"
     android:padding="20dp"
     android:orientation="vertical"
     android:scrollbarAlwaysDrawVerticalTrack="true">
@@ -39,91 +39,99 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/qz_Seven"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:padding="17dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_cate"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/qz_Seven"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:text="70's"
-            android:textColor="@color/black"
-            android:layout_marginBottom="12dp"
-            android:textAlignment="center"
-            android:textSize="26dp" />
+            android:layout_height="100dp"
+            android:padding="17dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/img_cat_sev"
+            android:orientation="vertical">
 
-        <TextView
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_black"
+                android:text="70's"
+                android:textColor="@color/black"
+                android:layout_marginBottom="12dp"
+                android:textAlignment="center"
+                android:textSize="26dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:id="@+id/high_one"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_black"
+                android:text="High Score: 200"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:textSize="18dp" />
+
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:id="@+id/high_one"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:text="High Score: 200"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="18dp" />
+            android:layout_height="100dp"
+            android:padding="17dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/img_cat_eight"
+            android:orientation="vertical">
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:padding="17dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_cate"
-        android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_black"
+                android:text="80's"
+                android:textColor="@color/black"
+                android:layout_marginBottom="12dp"
+                android:textAlignment="center"
+                android:textSize="26dp" />
 
-        <TextView
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_black"
+                android:id="@+id/high_two"
+                android:text="High Score: 200"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:textSize="18dp" />
+
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:text="80's"
-            android:textColor="@color/black"
-            android:layout_marginBottom="12dp"
-            android:textAlignment="center"
-            android:textSize="26dp" />
+            android:layout_height="100dp"
+            android:padding="17dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/img_cat_nine"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:id="@+id/high_two"
-            android:text="High Score: 200"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="18dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_black"
+                android:text="90's"
+                android:textColor="@color/black"
+                android:layout_marginBottom="12dp"
+                android:textAlignment="center"
+                android:textSize="26dp" />
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:padding="17dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/ic_cate"
-        android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato_black"
+                android:id="@+id/high_three"
+                android:text="High Score: 200"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:textSize="18dp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:text="90's"
-            android:textColor="@color/black"
-            android:layout_marginBottom="12dp"
-            android:textAlignment="center"
-            android:textSize="26dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/lato_black"
-            android:id="@+id/high_three"
-            android:text="High Score: 200"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="18dp" />
+        </LinearLayout>
 
     </LinearLayout>
 
