--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LandingActivity"
-    android:background="@drawable/pp_back"
+    android:background="@drawable/bg_android"
     android:padding="20dp"
     android:orientation="vertical">
 
@@ -15,16 +15,15 @@
         android:src="@drawable/img_icon"
         android:layout_gravity="left"/>
 
-    <com.google.android.material.card.MaterialCardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="165dp"
-        app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/light_pink"
+        android:orientation="vertical"
+        android:background="@drawable/img_container"
         android:padding="11dp"
-        app:strokeColor="@color/black"
         android:layout_marginTop="60dp"
-        app:strokeWidth="5dp"
-        app:contentPadding="15dp">
+        app:strokeWidth="0dp"
+>
 
         <TextView
             android:layout_width="match_parent"
@@ -39,14 +38,15 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/roboto"
             android:text="The trivia app themed around all movie and music pop culture from the 70’s, 80’s, 90’s and 2000’s. Test your general knowledge!"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="" />
-    </com.google.android.material.card.MaterialCardView>
+
+    </LinearLayout>
 
     <TextView
         android:fontFamily="@font/roboto_black"
@@ -57,54 +57,49 @@
         android:layout_marginBottom="10dp"
         android:textStyle="bold"
         android:layout_marginTop="80dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textAlignment="center"
         />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/outlinedTextField"
+    <EditText
+        android:id="@+id/u_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:hint="Name"
-        app:boxStrokeWidth="5dp"
+        android:paddingLeft="20dp"
+        android:textStyle="bold"
+        app:boxStrokeWidth="0dp"
+        android:background="@drawable/img_input"
         app:boxStrokeColor="@color/black"
-        app:boxCornerRadiusBottomStart="10dp"
-        app:boxCornerRadiusBottomEnd="10dp"
-        app:boxCornerRadiusTopEnd="10dp"
-        app:boxCornerRadiusTopStart="10dp"
-        app:boxStrokeWidthFocused="4dp"
+        android:fontFamily="@font/roboto"
+        android:textColor="@color/black"
+        android:textSize="20dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:id="@+id/u_name"
-            android:textStyle="bold"
-            android:fontFamily="@font/roboto"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            />
+    </EditText>
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="match_parent"
+    <LinearLayout
         android:id="@+id/btn_start"
-        android:layout_height="80dp"
-        app:cornerRadius="10dp"
-        android:backgroundTint="@color/bright_yellow"
-        app:strokeColor="@color/black"
-        android:layout_marginTop="120dp"
-        app:strokeWidth="5dp"
-        android:textColor="@color/black"
-        android:text="Start"
-        android:textAllCaps="false"
-        android:fontFamily="@font/roboto_black"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        app:contentPadding="15dp">
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginTop="140dp"
+        android:padding="17dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/img_btn"
+        android:orientation="vertical">
 
-    </com.google.android.material.button.MaterialButton>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/lato_black"
+            android:text="Start"
+            android:textColor="@color/black"
+            android:layout_marginBottom="10dp"
+            android:textAlignment="center"
+            android:textSize="26dp" />
+
+    </LinearLayout>
+
 
 
 </LinearLayout>
