--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".QuestionsActivity"
-    android:background="@drawable/pp_back"
-    android:padding="20dp"
+    android:id="@+id/qs_all"
+    android:padding="15dp"
+    android:gravity="center"
     android:orientation="vertical"
     android:scrollbarAlwaysDrawVerticalTrack="true">
 
@@ -14,8 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="10dp">
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="45dp"
@@ -27,36 +27,51 @@
             android:id="@+id/btn_back"
             app:strokeColor="@color/black" />
 
+        <LinearLayout
+            android:layout_width="160dp"
+            android:background="@drawable/img_view"
+            android:layout_height="160dp"
+            android:layout_marginLeft="60dp" >
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/q_image"
+                android:layout_marginLeft="7dp"
+                android:layout_marginTop="6dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                 />
+        </LinearLayout>
+
+
+
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/q_Image"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_gravity="center" />
 
-    <com.google.android.material.card.MaterialCardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="110dp"
         app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/light_pink"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:background="@drawable/img_container"
         app:strokeColor="@color/black"
-        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
-        app:strokeWidth="5dp"
-        app:contentPadding="20dp">
+        android:padding="10dp"
+        >
 
         <TextView
             android:id="@+id/qp_question"
+            android:scrollbars = "vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
-            android:text="The trivia app themed around all movie and music pop culture from the 70’s, 80’s, 90’s and 2000’s. Test your general knowledge!"
+            android:text="music pop culture from the 70’s, 80’s, 90’s and 2000’s. Test your general knowledge!"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp"
              />
-    </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
 
     //question containers
     <RadioGroup
@@ -66,69 +81,82 @@
         android:id="@+id/rg_answers">
         <RadioButton
             android:id="@+id/rb_answerOne"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:scaleType="centerCrop"
+            android:textColor="@color/black"
+            android:adjustViewBounds="true"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginBottom="10dp"
             android:text="Answer One"
-            android:textSize="21dp"
+            android:textSize="21sp"
             android:gravity="center"
             android:paddingBottom="4dp"
-            android:background="@drawable/ques_con"/>
+            android:background="@drawable/img_cat_sev_ques"/>
         <RadioButton
             android:id="@+id/rb_answerTwo"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:textColor="@color/black"
+            android:adjustViewBounds="true"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_marginBottom="15dp"
             android:text="Answer One"
-            android:textSize="21dp"
+            android:textSize="21sp"
             android:gravity="center"
             android:paddingBottom="4dp"
-            android:background="@drawable/ques_con"/>
+            android:background="@drawable/img_cat_sev_ques"/>
         <RadioButton
             android:id="@+id/rb_answerThree"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:textColor="@color/black"
+            android:adjustViewBounds="true"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_marginBottom="15dp"
             android:text="Answer One"
-            android:textSize="21dp"
+            android:textSize="21sp"
             android:gravity="center"
             android:paddingBottom="4dp"
-            android:background="@drawable/ques_con"/>
+            android:background="@drawable/img_cat_sev_ques"/>
 
         <RadioButton
             android:id="@+id/rb_answerFour"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:textColor="@color/black"
+            android:adjustViewBounds="true"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_marginBottom="15dp"
             android:text="Answer One"
-            android:textSize="21dp"
+            android:textSize="21sp"
             android:gravity="center"
             android:paddingBottom="4dp"
-            android:background="@drawable/ques_con"/>
+            android:background="@drawable/img_cat_sev_ques"/>
 
 
     </RadioGroup>
 
-    <com.google.android.material.button.MaterialButton
+    <RelativeLayout
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/bright_yellow"
-        android:fontFamily="@font/roboto_black"
-        android:text="Next"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="26dp"
-        android:shadowRadius="@integer/material_motion_duration_long_2"
-        android:shadowColor="@color/black"
-        android:textStyle="bold"
-        app:contentPadding="15dp"
-        app:cornerRadius="10dp"
-        app:strokeColor="@color/black"
-        app:strokeWidth="5dp">
+        android:layout_height="70dp"
+        android:layout_marginTop="25dp"
+        android:padding="17dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/img_btn"
+        android:orientation="vertical">
 
-    </com.google.android.material.button.MaterialButton>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/lato_black"
+            android:text="Next"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="26dp" />
+
+    </RelativeLayout>
 
 
 </LinearLayout>
