--- a/app/src/main/res/layout/activity_category_select.xml
+++ b/app/src/main/res/layout/activity_category_select.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LandingActivity"
+    tools:context=".CategorySelectActivity"
     android:background="@drawable/bg_android"
     android:padding="20dp"
     android:orientation="vertical"
@@ -75,6 +75,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/qz_Eight"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:padding="17dp"
