--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -90,8 +90,7 @@
             android:text="Answer One"
             android:textSize="21sp"
             android:gravity="center"
-            android:paddingBottom="4dp"
-            android:background="@drawable/img_cat_sev_ques"/>
+            android:paddingBottom="4dp" />
         <RadioButton
             android:id="@+id/rb_answerTwo"
             android:scaleType="centerCrop"
