--- a/app/src/main/res/layout/activity_category_select.xml
+++ b/app/src/main/res/layout/activity_category_select.xml
@@ -105,6 +105,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/qz_Nine"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:padding="17dp"
