--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -9,11 +9,27 @@
     android:padding="20dp"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/img_icon"
-        android:layout_gravity="left"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:id="@+id/logo"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/img_icon" />
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/icon_settings" />
+
+    </RelativeLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,7 +66,7 @@
         android:fontFamily="@font/roboto_black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Your Name"
+        android:text="Enter Username"
         android:textSize="26dp"
         android:layout_marginBottom="10dp"
         android:textStyle="bold"
