--- a/app/src/main/res/layout/activity_category_select.xml
+++ b/app/src/main/res/layout/activity_category_select.xml
@@ -28,6 +28,7 @@
             app:strokeColor="@color/black" />
 
         <TextView
+            android:id="@+id/sel_cat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Choose a category"
