--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -8,6 +8,7 @@
     android:padding="20dp"
     android:id="@+id/res_back"
     android:orientation="vertical"
+    android:gravity="center"
     android:scrollbarAlwaysDrawVerticalTrack="true">
 
     <LinearLayout
@@ -15,7 +16,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="50dp">
+        android:layout_marginBottom="20dp">
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="45dp"
@@ -40,7 +41,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="110dp"
         android:orientation="vertical"
         android:background="@drawable/img_container"
         android:gravity="center"
@@ -71,7 +72,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:orientation="vertical"
@@ -93,11 +94,12 @@
 
     </LinearLayout>
 
+
     <LinearLayout
         android:id="@+id/btn_cat"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="260dp"
         android:padding="17dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/img_btn"
